fix problem with scrollbar-gutter

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,7 @@ body {
   padding-left: 5%;
   padding-right: 5%;
   padding-top: 1%;
+  scrollbar-gutter: stable;
 }
 
 a {
